tests/ui/feature-gates/feature-gate-frontmatter.stderr
error[E0658]: frontmatters are experimental
  --> $DIR/feature-gate-frontmatter.rs:1:1
   |
LL | / ---cargo
LL | |
LL | | ---
   | |___^
   |
   = note: see issue #136889 <https://github.com/rust-lang/rust/issues/136889> for more information
   = help: add `#![feature(frontmatter)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
