tests/ui/feature-gates/feature-gate-frontmatter.rs
---cargo
//~^ ERROR: frontmatters are experimental
---

fn main() {}
